--- a/07_multi_stage_build/Dockerfile
+++ b/07_multi_stage_build/Dockerfile
@@ -14,6 +14,7 @@ COPY --chown=dev . /home/dev
 
 RUN npx tsc
 
+
 # --------------------------------------------------------------
 
 FROM node:20.5.0-alpine
@@ -23,17 +24,14 @@ USER dev
 
 WORKDIR /home/dev
 
-# lib-Ordner (Entwicklungsartefakte) wird nicht übernommen, ebensowenig node_modules!
 COPY --from=builder /home/dev/package.json ./package.json
 COPY --from=builder /home/dev/package-lock.json ./package-lock.json
 COPY --from=builder /home/dev/build ./build
 COPY --from=builder /home/dev/public ./public
 
+# lib-Ordner (Entwicklungsartefakte) wird nicht übernommen, ebensowenig node_modules!
+
 # keine dev-dependencies
 RUN npm install --production
 
-CMD ["node", "build/app.js"]
-
-
-
-
+CMD ["node", "app.js"]
